2019-04-28  Gavin Smith  <gavinsmith0123@gmail.com>

	Set TEXI2DVI in Makefile.

	* doc/Makefile.am: Set TEXI2DVI to use the texi2dvi in the 
	Texinfo sources rather than an installed one.

2019-04-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Ignore spaces before @seeentry, @seealso and @sortas.

	* tp/Texinfo/ParserNonXS.pm (_parse_texi): Split off an ignored 
	spaces element if one of these commands is seen.
	* tp/Texinfo/XS/parsetexi/parser.c 
	(isolate_last_space_menu_entry_node, isolate_trailing_space):
	Rename and add a parameter.
	(process_remaining_on_line): After these commands are seen, call 
	isolate_trailing_space.

	* tp/t/09indices.t (subentry_and_sortas): New test.

	This allows these commands to occur at the end of index commands 
	without trailing spaces being present in the output.

2019-04-27  Gavin Smith  <gavinsmith0123@gmail.com>

	"See also" index entries for DocBook output.

	* tp/Texinfo/Convert/DocBook.pm (_index_entry):
	Output <see> or <seealso> elements if @seeentry or @seealso 
	directives were given for the index entry.

2019-04-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/ParserNonXS.pm (_enter_index_entry),
	* tp/Texinfo/XS/parsetexi/indices.c (enter_index_entry),
	* tp/Texinfo/XS/parsetexi/api.c (build_single_index_data): 
	Always create index entry object but do not add it to array of 
	entries for the index if there was a @seeentry or @seealso.

2019-04-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi/indices.c (enter_index_entry): Skip if 
	'seeentry' or 'seealso' was recorded.
	* tp/Texinfo/XS/parsetexi/separator.c (handle_close_brace):
	Record values of 'seeentry' and 'seealso' the same way as for 
	'sortas'.  Ignore spaces following these commands.
	* tp/Texinfo/XS/parsetexi/command_data.txt: Add 'seeentry', 
	'seealso'.  Remove comments referring to line numbers in Common.pm.

2019-04-27  Gavin Smith  <gavinsmith0123@gmail.com>
